[package]
name = "ip-announce"
version = "0.1.0"
authors = ["lightsing <light.tsing@gmail.com>"]
edition = "2018"

[features]
compress = ["lzma-rs"]

[dependencies]
pnet = { version = "0.27", features = ["serde"] }
socket2 = "0.3"
hostname = "0.3"
thiserror = "1"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
lzma-rs = { version = "0.1", optional = true }